--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-PG_HOST=localhost
-PG_USER=ruraluser        # o ruraluser si creaste otro
+PG_HOST=appreactbd.cn8oio0gkdwh.us-east-1.rds.amazonaws.com
+PG_USER=ruraluser
 PG_PASSWORD=postgres
 PG_DATABASE=ruraldb
 PG_PORT=5432
