--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-PG_HOST=appreactbd.cn8oio0gkdwh.us-east-1.rds.amazonaws.com
+PG_HOST=dataappreactbd.cn8oio0gkdwh.us-east-1.rds.amazonaws.com
 PG_USER=ruraluser
 PG_PASSWORD=postgres
 PG_DATABASE=ruraldb
